// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createFile can choose a new filename 1`] = `
Array [
  Array [
    Object {
      "content": "ZmlsZW5hbWU=",
      "message": "Creating new file CODEOWNERS",
      "owner": "JasonEtco",
      "path": "CODEOWNERS",
      "repo": "example",
    },
  ],
]
`;

exports[`createFile creates a new file 1`] = `
Array [
  Array [
    Object {
      "content": "SGVsbG8h",
      "message": "Creating new file filename",
      "owner": "JasonEtco",
      "path": "filename",
      "repo": "example",
    },
  ],
]
`;

exports[`createFile creates a new file on the given branch 1`] = `
Array [
  Array [
    Object {
      "branch": "a-feature-branch",
      "content": "SGVsbG8h",
      "message": "Creating new file filename",
      "owner": "JasonEtco",
      "path": "filename",
      "repo": "example",
    },
  ],
]
`;

exports[`createFile replaces file contents with context variables 1`] = `
Array [
  Array [
    Object {
      "branch": "a-feature-branch",
      "content": "ZmlsZW5hbWU=",
      "message": "Creating new file filename",
      "owner": "JasonEtco",
      "path": "filename",
      "repo": "example",
    },
  ],
]
`;
